resources/assets/sass/pageEvent.sass
.pageEvent
  
  .sectionHero
    min-height: 100vh
    h2
      background-color: $colorBlue
      color: white
      padding: 20px 20px
      width: 50vw
      // white-space: nowrap
      position: relative
      z-index: 3
      margin-bottom: 50px
      margin-top: 160px
      +rwd_sm
        width: 100vw
        margin-top: -100px
      +bxshadow
      .small
        color: white
        font-weight: 800
    h3
      margin-top: 10px
    .tag
      display: inline-block
      margin-right: 10px
      border: 1px solid $colorBlue
      padding: 5px 10px
      border-radius: 50px
      font-size: 15px
      margin-bottom: 10px
      &:before
        content: "#"
    .venue
      color: $colorBlue
    .eventCover
      min-height: 70vh
      width: 50vw
      margin-top: -20px
      margin-left: 60px
      background-size: cover
      background-position: center center
      position: relative
      +rwd_sm
        width: 100vw
        margin-left: 0px
        min-height: 50vh
      &:after
        content: ""
        position: absolute
        left: 50%
        transform: translateX(-50%)
        bottom: -20px
        box-shadow: inset 0px 10px 20px -10px rgba(0,0,0,0.5) 
        +size( 70%,20px)
        background-color: $colorRed
      touch-action: auto
    .date
      font-size: 220px
      position: absolute
      font-weight: 900
      white-space: nowrap
      // font-family: Koula
      color: rgba(black,0.05)
      top: -80px
      left: -50px

  .sectionRecommend
    padding-top: 0
    padding-bottom: 0
    [class^="col"]
      padding: 0
    a
      display: block
      h2
        font-size: 32px
    +rwd_sm
      .content
        opacity: 1
        color: white
        background-color: rgba($colorBlue,0.5)
        h2,h3,hr
          opacity: 1
        hr
          width: 50px

  .sectionSchedule
    position: relative
    // padding-bottom: 0px
    &:before
      content: ""
      position: absolute
      +size(100%,60px)
      background: linear-gradient(-45deg,$colorRed,$colorBgRed)
      top: -30px

    .datetag
      background-color: $colorRed
      padding: 2px 15px
      border-radius: 40px
      display: inline-block
      position: absolute
      left: -50px
      font-size: 18px
      +rwd_sm
        position: relative
        
      
    .timeline
      +rwd_sm
        padding-left: 50px
        margin-top: 30px

      li
        display: flex
        border-left: 1px solid white
        padding-left: 20px
        position: relative
        padding-bottom: 20px
        &:before
          content: ""
          +size(10px)
          background-color: white
          position: absolute
          left: -5px
          top: 10px
          border-radius: 50%

        .time
          font-size: 20px
          margin-right: 15px
          font-style: italic
        .content
          font-size: 18px
          cursor: pointer
          h4
            margin-top: 5px
          p
            margin: 0
            +trans

        &:hover
          p
            opacity: 0.8

        +rwd_sm
          &:nth-child(2)
            padding-top: 10px
            &:before
              top: 20px

      // display: flex
      // flex-direction: column
      // align-items: center

  .sectionGuest
    position: relative
    .row
      flex-wrap: wrap
    h2
      transform-origin: left top
      transform: rotate(90deg)
      font-size: 80px
      color: $colorRed
      position: absolute
    .speakers
      // display: flex
      list-style: none
      padding: 0
      
      +rwd_sm
        display: block
        li
          margin-bottom: 30px
      .place,.name
        font-weight: 700
      .name
        margin-top: 0px
      .headshot
        min-height: 350px
        background-size: cover
        background-position: center center
        display: block

        +bxshadow
        
      .place
        color: $colorRed
        margin-top: 50px
    &:before
      content: ""
      height: 50px
      background-color: $colorRed
      position: absolute
      width: 100%
      bottom: 50px
      
  .sectionPhotos
    $pHeight: 250px
    padding-bottom: 0
    
    h2
      font-size: 60px
      color: $colorRed
      margin-top: -40px
    .row
      margin: 0
      [class^='col']
        padding: 0
        min-height: $pHeight
        &.red
          background-color: $colorRed
        &.blue
          background-color: $colorRed
    .rowPhotos
      margin-left: -15px
      margin-right: -15px
      cursor: pointer
      display: block

    .photoBlock
      min-height: $pHeight
      h3
        color: white
        font-size: 20px
      .content
        text-align: center
        font-size: 20px

    .photoBlock.left
      min-height: $pHeight*3
      +rwd_sm
        min-height: $pHeight

  .sectionOranizers
    .agencies
      display: flex
      list-style: none
      align-items: center
      margin-top: 50px
    // ul.agencies
    //   display: flex
    //   align-items: center

    .logo
      width: 150px
      filter: saturate(0%)
      margin: 40px
      cursor: pointer
      img
        width: 100%
      &:hover
        filter: saturate(100%)
    // padding-top: 0
    // padding-bottom: 0

  .sectionRegist
    iframe
      width: 100%
      min-height: 520px
      border: none
      background-color: transparent
      +rwd_sm
        margin-top: 50px

